# Copyright (C) 2007, 2008, 2009, 2010 Her Majesty the Queen in Right
# of Canada (Communications Research Center Canada)
#
#  Copyright (C) 2018
#  Matthias P. Braendli, matthias.braendli@mpb.li
#
#   http://opendigitalradio.org
#
# This file is part of ODR-DabMod.
#
# ODR-DabMod is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# ODR-DabMod is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with ODR-DabMod.  If not, see <http://www.gnu.org/licenses/>.

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = COPYING NEWS README.md AUTHORS ChangeLog TODO doc \
			 lib/fec/README.md lib/fec/LICENSE \
			 lib/edi/README.md

if IS_GIT_REPO
GITVERSION_FLAGS = -DGITVERSION="\"`git describe --dirty`\""
else
GITVERSION_FLAGS =
endif

bin_PROGRAMS = odr-dabmod

FFT_LDADD=

ASIO_FILES = \
	lib/asio.hpp \
	lib/asio/associated_allocator.hpp \
	lib/asio/associated_executor.hpp \
	lib/asio/async_result.hpp \
	lib/asio/basic_datagram_socket.hpp \
	lib/asio/basic_deadline_timer.hpp \
	lib/asio/basic_io_object.hpp \
	lib/asio/basic_raw_socket.hpp \
	lib/asio/basic_seq_packet_socket.hpp \
	lib/asio/basic_serial_port.hpp \
	lib/asio/basic_signal_set.hpp \
	lib/asio/basic_socket_acceptor.hpp \
	lib/asio/basic_socket.hpp \
	lib/asio/basic_socket_iostream.hpp \
	lib/asio/basic_socket_streambuf.hpp \
	lib/asio/basic_streambuf_fwd.hpp \
	lib/asio/basic_streambuf.hpp \
	lib/asio/basic_stream_socket.hpp \
	lib/asio/basic_waitable_timer.hpp \
	lib/asio/bind_executor.hpp \
	lib/asio/buffered_read_stream_fwd.hpp \
	lib/asio/buffered_read_stream.hpp \
	lib/asio/buffered_stream_fwd.hpp \
	lib/asio/buffered_stream.hpp \
	lib/asio/buffered_write_stream_fwd.hpp \
	lib/asio/buffered_write_stream.hpp \
	lib/asio/buffer.hpp \
	lib/asio/buffers_iterator.hpp \
	lib/asio/completion_condition.hpp \
	lib/asio/connect.hpp \
	lib/asio/coroutine.hpp \
	lib/asio/datagram_socket_service.hpp \
	lib/asio/deadline_timer.hpp \
	lib/asio/deadline_timer_service.hpp \
	lib/asio/defer.hpp \
	lib/asio/detail/array_fwd.hpp \
	lib/asio/detail/array.hpp \
	lib/asio/detail/assert.hpp \
	lib/asio/detail/atomic_count.hpp \
	lib/asio/detail/base_from_completion_cond.hpp \
	lib/asio/detail/bind_handler.hpp \
	lib/asio/detail/buffered_stream_storage.hpp \
	lib/asio/detail/buffer_resize_guard.hpp \
	lib/asio/detail/buffer_sequence_adapter.hpp \
	lib/asio/detail/call_stack.hpp \
	lib/asio/detail/chrono.hpp \
	lib/asio/detail/chrono_time_traits.hpp \
	lib/asio/detail/completion_handler.hpp \
	lib/asio/detail/concurrency_hint.hpp \
	lib/asio/detail/conditionally_enabled_event.hpp \
	lib/asio/detail/conditionally_enabled_mutex.hpp \
	lib/asio/detail/config.hpp \
	lib/asio/detail/consuming_buffers.hpp \
	lib/asio/detail/cstddef.hpp \
	lib/asio/detail/cstdint.hpp \
	lib/asio/detail/date_time_fwd.hpp \
	lib/asio/detail/deadline_timer_service.hpp \
	lib/asio/detail/dependent_type.hpp \
	lib/asio/detail/descriptor_ops.hpp \
	lib/asio/detail/descriptor_read_op.hpp \
	lib/asio/detail/descriptor_write_op.hpp \
	lib/asio/detail/dev_poll_reactor.hpp \
	lib/asio/detail/epoll_reactor.hpp \
	lib/asio/detail/eventfd_select_interrupter.hpp \
	lib/asio/detail/event.hpp \
	lib/asio/detail/executor_op.hpp \
	lib/asio/detail/fd_set_adapter.hpp \
	lib/asio/detail/fenced_block.hpp \
	lib/asio/detail/functional.hpp \
	lib/asio/detail/gcc_arm_fenced_block.hpp \
	lib/asio/detail/gcc_hppa_fenced_block.hpp \
	lib/asio/detail/gcc_sync_fenced_block.hpp \
	lib/asio/detail/gcc_x86_fenced_block.hpp \
	lib/asio/detail/global.hpp \
	lib/asio/detail/handler_alloc_helpers.hpp \
	lib/asio/detail/handler_cont_helpers.hpp \
	lib/asio/detail/handler_invoke_helpers.hpp \
	lib/asio/detail/handler_tracking.hpp \
	lib/asio/detail/handler_type_requirements.hpp \
	lib/asio/detail/handler_work.hpp \
	lib/asio/detail/hash_map.hpp \
	lib/asio/detail/impl/buffer_sequence_adapter.ipp \
	lib/asio/detail/impl/descriptor_ops.ipp \
	lib/asio/detail/impl/dev_poll_reactor.hpp \
	lib/asio/detail/impl/dev_poll_reactor.ipp \
	lib/asio/detail/impl/epoll_reactor.hpp \
	lib/asio/detail/impl/epoll_reactor.ipp \
	lib/asio/detail/impl/eventfd_select_interrupter.ipp \
	lib/asio/detail/impl/handler_tracking.ipp \
	lib/asio/detail/impl/kqueue_reactor.hpp \
	lib/asio/detail/impl/kqueue_reactor.ipp \
	lib/asio/detail/impl/null_event.ipp \
	lib/asio/detail/impl/pipe_select_interrupter.ipp \
	lib/asio/detail/impl/posix_event.ipp \
	lib/asio/detail/impl/posix_mutex.ipp \
	lib/asio/detail/impl/posix_thread.ipp \
	lib/asio/detail/impl/posix_tss_ptr.ipp \
	lib/asio/detail/impl/reactive_descriptor_service.ipp \
	lib/asio/detail/impl/reactive_serial_port_service.ipp \
	lib/asio/detail/impl/reactive_socket_service_base.ipp \
	lib/asio/detail/impl/resolver_service_base.ipp \
	lib/asio/detail/impl/scheduler.ipp \
	lib/asio/detail/impl/select_reactor.hpp \
	lib/asio/detail/impl/select_reactor.ipp \
	lib/asio/detail/impl/service_registry.hpp \
	lib/asio/detail/impl/service_registry.ipp \
	lib/asio/detail/impl/signal_set_service.ipp \
	lib/asio/detail/impl/socket_ops.ipp \
	lib/asio/detail/impl/socket_select_interrupter.ipp \
	lib/asio/detail/impl/strand_executor_service.hpp \
	lib/asio/detail/impl/strand_executor_service.ipp \
	lib/asio/detail/impl/strand_service.hpp \
	lib/asio/detail/impl/strand_service.ipp \
	lib/asio/detail/impl/throw_error.ipp \
	lib/asio/detail/impl/timer_queue_ptime.ipp \
	lib/asio/detail/impl/timer_queue_set.ipp \
	lib/asio/detail/impl/win_event.ipp \
	lib/asio/detail/impl/win_iocp_handle_service.ipp \
	lib/asio/detail/impl/win_iocp_io_context.hpp \
	lib/asio/detail/impl/win_iocp_io_context.ipp \
	lib/asio/detail/impl/win_iocp_serial_port_service.ipp \
	lib/asio/detail/impl/win_iocp_socket_service_base.ipp \
	lib/asio/detail/impl/win_mutex.ipp \
	lib/asio/detail/impl/win_object_handle_service.ipp \
	lib/asio/detail/impl/winrt_ssocket_service_base.ipp \
	lib/asio/detail/impl/winrt_timer_scheduler.hpp \
	lib/asio/detail/impl/winrt_timer_scheduler.ipp \
	lib/asio/detail/impl/winsock_init.ipp \
	lib/asio/detail/impl/win_static_mutex.ipp \
	lib/asio/detail/impl/win_thread.ipp \
	lib/asio/detail/impl/win_tss_ptr.ipp \
	lib/asio/detail/io_control.hpp \
	lib/asio/detail/is_buffer_sequence.hpp \
	lib/asio/detail/is_executor.hpp \
	lib/asio/detail/keyword_tss_ptr.hpp \
	lib/asio/detail/kqueue_reactor.hpp \
	lib/asio/detail/limits.hpp \
	lib/asio/detail/local_free_on_block_exit.hpp \
	lib/asio/detail/macos_fenced_block.hpp \
	lib/asio/detail/memory.hpp \
	lib/asio/detail/mutex.hpp \
	lib/asio/detail/noncopyable.hpp \
	lib/asio/detail/null_event.hpp \
	lib/asio/detail/null_fenced_block.hpp \
	lib/asio/detail/null_global.hpp \
	lib/asio/detail/null_mutex.hpp \
	lib/asio/detail/null_reactor.hpp \
	lib/asio/detail/null_signal_blocker.hpp \
	lib/asio/detail/null_socket_service.hpp \
	lib/asio/detail/null_static_mutex.hpp \
	lib/asio/detail/null_thread.hpp \
	lib/asio/detail/null_tss_ptr.hpp \
	lib/asio/detail/object_pool.hpp \
	lib/asio/detail/old_win_sdk_compat.hpp \
	lib/asio/detail/operation.hpp \
	lib/asio/detail/op_queue.hpp \
	lib/asio/detail/pipe_select_interrupter.hpp \
	lib/asio/detail/pop_options.hpp \
	lib/asio/detail/posix_event.hpp \
	lib/asio/detail/posix_fd_set_adapter.hpp \
	lib/asio/detail/posix_global.hpp \
	lib/asio/detail/posix_mutex.hpp \
	lib/asio/detail/posix_signal_blocker.hpp \
	lib/asio/detail/posix_static_mutex.hpp \
	lib/asio/detail/posix_thread.hpp \
	lib/asio/detail/posix_tss_ptr.hpp \
	lib/asio/detail/push_options.hpp \
	lib/asio/detail/reactive_descriptor_service.hpp \
	lib/asio/detail/reactive_null_buffers_op.hpp \
	lib/asio/detail/reactive_serial_port_service.hpp \
	lib/asio/detail/reactive_socket_accept_op.hpp \
	lib/asio/detail/reactive_socket_connect_op.hpp \
	lib/asio/detail/reactive_socket_recvfrom_op.hpp \
	lib/asio/detail/reactive_socket_recvmsg_op.hpp \
	lib/asio/detail/reactive_socket_recv_op.hpp \
	lib/asio/detail/reactive_socket_send_op.hpp \
	lib/asio/detail/reactive_socket_sendto_op.hpp \
	lib/asio/detail/reactive_socket_service_base.hpp \
	lib/asio/detail/reactive_socket_service.hpp \
	lib/asio/detail/reactive_wait_op.hpp \
	lib/asio/detail/reactor_fwd.hpp \
	lib/asio/detail/reactor.hpp \
	lib/asio/detail/reactor_op.hpp \
	lib/asio/detail/reactor_op_queue.hpp \
	lib/asio/detail/recycling_allocator.hpp \
	lib/asio/detail/regex_fwd.hpp \
	lib/asio/detail/resolve_endpoint_op.hpp \
	lib/asio/detail/resolve_op.hpp \
	lib/asio/detail/resolve_query_op.hpp \
	lib/asio/detail/resolver_service_base.hpp \
	lib/asio/detail/resolver_service.hpp \
	lib/asio/detail/scheduler.hpp \
	lib/asio/detail/scheduler_operation.hpp \
	lib/asio/detail/scheduler_thread_info.hpp \
	lib/asio/detail/scoped_lock.hpp \
	lib/asio/detail/scoped_ptr.hpp \
	lib/asio/detail/select_interrupter.hpp \
	lib/asio/detail/select_reactor.hpp \
	lib/asio/detail/service_registry.hpp \
	lib/asio/detail/signal_blocker.hpp \
	lib/asio/detail/signal_handler.hpp \
	lib/asio/detail/signal_init.hpp \
	lib/asio/detail/signal_op.hpp \
	lib/asio/detail/signal_set_service.hpp \
	lib/asio/detail/socket_holder.hpp \
	lib/asio/detail/socket_ops.hpp \
	lib/asio/detail/socket_option.hpp \
	lib/asio/detail/socket_select_interrupter.hpp \
	lib/asio/detail/socket_types.hpp \
	lib/asio/detail/solaris_fenced_block.hpp \
	lib/asio/detail/static_mutex.hpp \
	lib/asio/detail/std_event.hpp \
	lib/asio/detail/std_fenced_block.hpp \
	lib/asio/detail/std_global.hpp \
	lib/asio/detail/std_mutex.hpp \
	lib/asio/detail/std_static_mutex.hpp \
	lib/asio/detail/std_thread.hpp \
	lib/asio/detail/strand_executor_service.hpp \
	lib/asio/detail/strand_service.hpp \
	lib/asio/detail/string_view.hpp \
	lib/asio/detail/thread_context.hpp \
	lib/asio/detail/thread_group.hpp \
	lib/asio/detail/thread.hpp \
	lib/asio/detail/thread_info_base.hpp \
	lib/asio/detail/throw_error.hpp \
	lib/asio/detail/throw_exception.hpp \
	lib/asio/detail/timer_queue_base.hpp \
	lib/asio/detail/timer_queue.hpp \
	lib/asio/detail/timer_queue_ptime.hpp \
	lib/asio/detail/timer_queue_set.hpp \
	lib/asio/detail/timer_scheduler_fwd.hpp \
	lib/asio/detail/timer_scheduler.hpp \
	lib/asio/detail/tss_ptr.hpp \
	lib/asio/detail/type_traits.hpp \
	lib/asio/detail/variadic_templates.hpp \
	lib/asio/detail/wait_handler.hpp \
	lib/asio/detail/wait_op.hpp \
	lib/asio/detail/winapp_thread.hpp \
	lib/asio/detail/wince_thread.hpp \
	lib/asio/detail/win_event.hpp \
	lib/asio/detail/win_fd_set_adapter.hpp \
	lib/asio/detail/win_fenced_block.hpp \
	lib/asio/detail/win_global.hpp \
	lib/asio/detail/win_iocp_handle_read_op.hpp \
	lib/asio/detail/win_iocp_handle_service.hpp \
	lib/asio/detail/win_iocp_handle_write_op.hpp \
	lib/asio/detail/win_iocp_io_context.hpp \
	lib/asio/detail/win_iocp_null_buffers_op.hpp \
	lib/asio/detail/win_iocp_operation.hpp \
	lib/asio/detail/win_iocp_overlapped_op.hpp \
	lib/asio/detail/win_iocp_overlapped_ptr.hpp \
	lib/asio/detail/win_iocp_serial_port_service.hpp \
	lib/asio/detail/win_iocp_socket_accept_op.hpp \
	lib/asio/detail/win_iocp_socket_connect_op.hpp \
	lib/asio/detail/win_iocp_socket_recvfrom_op.hpp \
	lib/asio/detail/win_iocp_socket_recvmsg_op.hpp \
	lib/asio/detail/win_iocp_socket_recv_op.hpp \
	lib/asio/detail/win_iocp_socket_send_op.hpp \
	lib/asio/detail/win_iocp_socket_service_base.hpp \
	lib/asio/detail/win_iocp_socket_service.hpp \
	lib/asio/detail/win_iocp_thread_info.hpp \
	lib/asio/detail/win_iocp_wait_op.hpp \
	lib/asio/detail/win_mutex.hpp \
	lib/asio/detail/win_object_handle_service.hpp \
	lib/asio/detail/winrt_async_manager.hpp \
	lib/asio/detail/winrt_async_op.hpp \
	lib/asio/detail/winrt_resolve_op.hpp \
	lib/asio/detail/winrt_resolver_service.hpp \
	lib/asio/detail/winrt_socket_connect_op.hpp \
	lib/asio/detail/winrt_socket_recv_op.hpp \
	lib/asio/detail/winrt_socket_send_op.hpp \
	lib/asio/detail/winrt_ssocket_service_base.hpp \
	lib/asio/detail/winrt_ssocket_service.hpp \
	lib/asio/detail/winrt_timer_scheduler.hpp \
	lib/asio/detail/winrt_utils.hpp \
	lib/asio/detail/winsock_init.hpp \
	lib/asio/detail/win_static_mutex.hpp \
	lib/asio/detail/win_thread.hpp \
	lib/asio/detail/win_tss_ptr.hpp \
	lib/asio/detail/work_dispatcher.hpp \
	lib/asio/detail/wrapped_handler.hpp \
	lib/asio/dispatch.hpp \
	lib/asio/error_code.hpp \
	lib/asio/error.hpp \
	lib/asio/execution_context.hpp \
	lib/asio/executor.hpp \
	lib/asio/executor_work_guard.hpp \
	lib/asio/experimental/co_spawn.hpp \
	lib/asio/experimental/detached.hpp \
	lib/asio/experimental.hpp \
	lib/asio/experimental/impl/co_spawn.hpp \
	lib/asio/experimental/impl/detached.hpp \
	lib/asio/experimental/impl/redirect_error.hpp \
	lib/asio/experimental/redirect_error.hpp \
	lib/asio/generic/basic_endpoint.hpp \
	lib/asio/generic/datagram_protocol.hpp \
	lib/asio/generic/detail/endpoint.hpp \
	lib/asio/generic/detail/impl/endpoint.ipp \
	lib/asio/generic/raw_protocol.hpp \
	lib/asio/generic/seq_packet_protocol.hpp \
	lib/asio/generic/stream_protocol.hpp \
	lib/asio/handler_alloc_hook.hpp \
	lib/asio/handler_continuation_hook.hpp \
	lib/asio/handler_invoke_hook.hpp \
	lib/asio/handler_type.hpp \
	lib/asio/high_resolution_timer.hpp \
	lib/asio.hpp \
	lib/asio/impl/buffered_read_stream.hpp \
	lib/asio/impl/buffered_write_stream.hpp \
	lib/asio/impl/connect.hpp \
	lib/asio/impl/defer.hpp \
	lib/asio/impl/dispatch.hpp \
	lib/asio/impl/error_code.ipp \
	lib/asio/impl/error.ipp \
	lib/asio/impl/execution_context.hpp \
	lib/asio/impl/execution_context.ipp \
	lib/asio/impl/executor.hpp \
	lib/asio/impl/executor.ipp \
	lib/asio/impl/handler_alloc_hook.ipp \
	lib/asio/impl/io_context.hpp \
	lib/asio/impl/io_context.ipp \
	lib/asio/impl/post.hpp \
	lib/asio/impl/read_at.hpp \
	lib/asio/impl/read.hpp \
	lib/asio/impl/read_until.hpp \
	lib/asio/impl/serial_port_base.hpp \
	lib/asio/impl/serial_port_base.ipp \
	lib/asio/impl/spawn.hpp \
	lib/asio/impl/src.hpp \
	lib/asio/impl/system_context.hpp \
	lib/asio/impl/system_context.ipp \
	lib/asio/impl/system_executor.hpp \
	lib/asio/impl/thread_pool.hpp \
	lib/asio/impl/thread_pool.ipp \
	lib/asio/impl/use_future.hpp \
	lib/asio/impl/write_at.hpp \
	lib/asio/impl/write.hpp \
	lib/asio/io_context.hpp \
	lib/asio/io_context_strand.hpp \
	lib/asio/io_service.hpp \
	lib/asio/io_service_strand.hpp \
	lib/asio/ip/address.hpp \
	lib/asio/ip/address_v4.hpp \
	lib/asio/ip/address_v4_iterator.hpp \
	lib/asio/ip/address_v4_range.hpp \
	lib/asio/ip/address_v6.hpp \
	lib/asio/ip/address_v6_iterator.hpp \
	lib/asio/ip/address_v6_range.hpp \
	lib/asio/ip/bad_address_cast.hpp \
	lib/asio/ip/basic_endpoint.hpp \
	lib/asio/ip/basic_resolver_entry.hpp \
	lib/asio/ip/basic_resolver.hpp \
	lib/asio/ip/basic_resolver_iterator.hpp \
	lib/asio/ip/basic_resolver_query.hpp \
	lib/asio/ip/basic_resolver_results.hpp \
	lib/asio/ip/detail/endpoint.hpp \
	lib/asio/ip/detail/impl/endpoint.ipp \
	lib/asio/ip/detail/socket_option.hpp \
	lib/asio/ip/host_name.hpp \
	lib/asio/ip/icmp.hpp \
	lib/asio/ip/impl/address.hpp \
	lib/asio/ip/impl/address.ipp \
	lib/asio/ip/impl/address_v4.hpp \
	lib/asio/ip/impl/address_v4.ipp \
	lib/asio/ip/impl/address_v6.hpp \
	lib/asio/ip/impl/address_v6.ipp \
	lib/asio/ip/impl/basic_endpoint.hpp \
	lib/asio/ip/impl/host_name.ipp \
	lib/asio/ip/impl/network_v4.hpp \
	lib/asio/ip/impl/network_v4.ipp \
	lib/asio/ip/impl/network_v6.hpp \
	lib/asio/ip/impl/network_v6.ipp \
	lib/asio/ip/multicast.hpp \
	lib/asio/ip/network_v4.hpp \
	lib/asio/ip/network_v6.hpp \
	lib/asio/ip/resolver_base.hpp \
	lib/asio/ip/resolver_query_base.hpp \
	lib/asio/ip/resolver_service.hpp \
	lib/asio/ip/tcp.hpp \
	lib/asio/ip/udp.hpp \
	lib/asio/ip/unicast.hpp \
	lib/asio/ip/v6_only.hpp \
	lib/asio/is_executor.hpp \
	lib/asio/is_read_buffered.hpp \
	lib/asio/is_write_buffered.hpp \
	lib/asio/local/basic_endpoint.hpp \
	lib/asio/local/connect_pair.hpp \
	lib/asio/local/datagram_protocol.hpp \
	lib/asio/local/detail/endpoint.hpp \
	lib/asio/local/detail/impl/endpoint.ipp \
	lib/asio/local/stream_protocol.hpp \
	lib/asio/packaged_task.hpp \
	lib/asio/placeholders.hpp \
	lib/asio/posix/basic_descriptor.hpp \
	lib/asio/posix/basic_stream_descriptor.hpp \
	lib/asio/posix/descriptor_base.hpp \
	lib/asio/posix/descriptor.hpp \
	lib/asio/posix/stream_descriptor.hpp \
	lib/asio/posix/stream_descriptor_service.hpp \
	lib/asio/post.hpp \
	lib/asio/raw_socket_service.hpp \
	lib/asio/read_at.hpp \
	lib/asio/read.hpp \
	lib/asio/read_until.hpp \
	lib/asio/seq_packet_socket_service.hpp \
	lib/asio/serial_port_base.hpp \
	lib/asio/serial_port.hpp \
	lib/asio/serial_port_service.hpp \
	lib/asio/signal_set.hpp \
	lib/asio/signal_set_service.hpp \
	lib/asio/socket_acceptor_service.hpp \
	lib/asio/socket_base.hpp \
	lib/asio/spawn.hpp \
	lib/asio/ssl/context_base.hpp \
	lib/asio/ssl/context.hpp \
	lib/asio/ssl/detail/buffered_handshake_op.hpp \
	lib/asio/ssl/detail/engine.hpp \
	lib/asio/ssl/detail/handshake_op.hpp \
	lib/asio/ssl/detail/impl/engine.ipp \
	lib/asio/ssl/detail/impl/openssl_init.ipp \
	lib/asio/ssl/detail/io.hpp \
	lib/asio/ssl/detail/openssl_init.hpp \
	lib/asio/ssl/detail/openssl_types.hpp \
	lib/asio/ssl/detail/password_callback.hpp \
	lib/asio/ssl/detail/read_op.hpp \
	lib/asio/ssl/detail/shutdown_op.hpp \
	lib/asio/ssl/detail/stream_core.hpp \
	lib/asio/ssl/detail/verify_callback.hpp \
	lib/asio/ssl/detail/write_op.hpp \
	lib/asio/ssl/error.hpp \
	lib/asio/ssl.hpp \
	lib/asio/ssl/impl/context.hpp \
	lib/asio/ssl/impl/context.ipp \
	lib/asio/ssl/impl/error.ipp \
	lib/asio/ssl/impl/rfc2818_verification.ipp \
	lib/asio/ssl/impl/src.hpp \
	lib/asio/ssl/rfc2818_verification.hpp \
	lib/asio/ssl/stream_base.hpp \
	lib/asio/ssl/stream.hpp \
	lib/asio/ssl/verify_context.hpp \
	lib/asio/ssl/verify_mode.hpp \
	lib/asio/steady_timer.hpp \
	lib/asio/strand.hpp \
	lib/asio/streambuf.hpp \
	lib/asio/stream_socket_service.hpp \
	lib/asio/system_context.hpp \
	lib/asio/system_error.hpp \
	lib/asio/system_executor.hpp \
	lib/asio/system_timer.hpp \
	lib/asio/thread.hpp \
	lib/asio/thread_pool.hpp \
	lib/asio/time_traits.hpp \
	lib/asio/ts/buffer.hpp \
	lib/asio/ts/executor.hpp \
	lib/asio/ts/internet.hpp \
	lib/asio/ts/io_context.hpp \
	lib/asio/ts/netfwd.hpp \
	lib/asio/ts/net.hpp \
	lib/asio/ts/socket.hpp \
	lib/asio/ts/timer.hpp \
	lib/asio/unyield.hpp \
	lib/asio/use_future.hpp \
	lib/asio/uses_executor.hpp \
	lib/asio/version.hpp \
	lib/asio/waitable_timer_service.hpp \
	lib/asio/wait_traits.hpp \
	lib/asio/windows/basic_handle.hpp \
	lib/asio/windows/basic_object_handle.hpp \
	lib/asio/windows/basic_random_access_handle.hpp \
	lib/asio/windows/basic_stream_handle.hpp \
	lib/asio/windows/object_handle.hpp \
	lib/asio/windows/object_handle_service.hpp \
	lib/asio/windows/overlapped_handle.hpp \
	lib/asio/windows/overlapped_ptr.hpp \
	lib/asio/windows/random_access_handle.hpp \
	lib/asio/windows/random_access_handle_service.hpp \
	lib/asio/windows/stream_handle.hpp \
	lib/asio/windows/stream_handle_service.hpp \
	lib/asio/write_at.hpp \
	lib/asio/write.hpp \
	lib/asio/yield.hpp

odr_dabmod_CFLAGS   = -Wall -Isrc -Ilib \
					  $(GITVERSION_FLAGS)
odr_dabmod_CXXFLAGS = -Wall -Isrc -Ilib -std=c++11 \
					  $(GITVERSION_FLAGS) \
					  -DASIO_HEADER_ONLY
odr_dabmod_LDADD    = $(FFT_LDADD)
odr_dabmod_SOURCES  = src/DabMod.cpp \
					  src/PcDebug.h \
					  src/Socket.h \
					  src/Socket.cpp \
					  src/DabModulator.cpp \
					  src/DabModulator.h \
					  src/Buffer.cpp \
					  src/Buffer.h \
					  src/ConfigParser.cpp \
					  src/ConfigParser.h \
					  src/ModPlugin.cpp \
					  src/ModPlugin.h \
					  src/EtiReader.cpp \
					  src/EtiReader.h \
					  src/Eti.cpp \
					  src/Eti.h \
					  src/FicSource.cpp \
					  src/FicSource.h \
					  src/PuncturingRule.cpp \
					  src/PuncturingRule.h \
					  src/PuncturingEncoder.cpp \
					  src/PuncturingEncoder.h \
					  src/SubchannelSource.cpp \
					  src/SubchannelSource.h \
					  src/Flowgraph.cpp \
					  src/Flowgraph.h \
					  src/OutputMemory.cpp \
					  src/OutputMemory.h \
					  src/OutputZeroMQ.cpp \
					  src/OutputZeroMQ.h \
					  src/TimestampDecoder.h \
					  src/TimestampDecoder.cpp \
					  src/InputFileReader.cpp \
					  src/InputMemory.cpp \
					  src/InputMemory.h \
					  src/InputReader.h \
					  src/InputTcpReader.cpp \
					  src/InputZeroMQReader.cpp \
					  src/OutputFile.cpp \
					  src/OutputFile.h \
					  src/FrameMultiplexer.cpp \
					  src/FrameMultiplexer.h \
					  src/PrbsGenerator.cpp \
					  src/PrbsGenerator.h \
					  src/BlockPartitioner.cpp \
					  src/BlockPartitioner.h \
					  src/SignalMultiplexer.cpp \
					  src/SignalMultiplexer.h \
					  src/ConvEncoder.cpp \
					  src/ConvEncoder.h \
					  src/TimeInterleaver.cpp \
					  src/TimeInterleaver.h \
					  src/ThreadsafeQueue.h \
					  src/Log.cpp \
					  src/Log.h \
					  src/RemoteControl.cpp \
					  src/RemoteControl.h \
					  src/FormatConverter.cpp \
					  src/FormatConverter.h \
					  src/Utils.cpp \
					  src/Utils.h \
					  src/zmq.hpp \
					  lib/INIReader.h \
					  lib/crc.h \
					  lib/crc.c \
					  lib/fec/char.h \
					  lib/fec/decode_rs_char.c \
					  lib/fec/decode_rs.h \
					  lib/fec/encode_rs_char.c \
					  lib/fec/encode_rs.h \
					  lib/fec/fec.h \
					  lib/fec/init_rs_char.c \
					  lib/fec/init_rs.h \
					  lib/fec/rs-common.h \
					  $(ASIO_FILES)

if !COMPILE_FOR_EASYDABV3
odr_dabmod_SOURCES += \
					  src/FIRFilter.cpp \
					  src/FIRFilter.h \
					  src/MemlessPoly.cpp \
					  src/MemlessPoly.h \
					  src/GainControl.cpp \
					  src/GainControl.h \
					  src/output/Feedback.cpp \
					  src/output/Feedback.h \
					  src/output/SDR.cpp \
					  src/output/SDR.h \
					  src/output/SDRDevice.h \
					  src/output/Soapy.cpp \
					  src/output/Soapy.h \
					  src/output/UHD.cpp \
					  src/output/UHD.h \
					  src/output/USRPTime.cpp \
					  src/output/USRPTime.h \
					  src/PhaseReference.cpp \
					  src/PhaseReference.h \
					  src/QpskSymbolMapper.cpp \
					  src/QpskSymbolMapper.h \
					  src/FrequencyInterleaver.cpp \
					  src/FrequencyInterleaver.h \
					  src/DifferentialModulator.cpp \
					  src/DifferentialModulator.h \
					  src/NullSymbol.cpp \
					  src/NullSymbol.h \
					  src/CicEqualizer.cpp \
					  src/CicEqualizer.h \
					  src/OfdmGenerator.cpp \
					  src/OfdmGenerator.h \
					  src/GuardIntervalInserter.cpp \
					  src/GuardIntervalInserter.h \
					  src/Resampler.cpp \
					  src/Resampler.h \
					  src/PAPRStats.cpp \
					  src/PAPRStats.h \
					  src/TII.cpp \
					  src/TII.h \
					  $(ASIO_FILES)

odr_dabmod_LDADD   += $(UHD_LIBS)
endif

if COMPILE_EDI
odr_dabmod_SOURCES += lib/edi/buffer_unpack.hpp \
					  lib/edi/eti.hpp \
					  lib/edi/eti.cpp \
					  lib/edi/ETIDecoder.hpp \
					  lib/edi/ETIDecoder.cpp \
					  lib/edi/PFT.hpp \
					  lib/edi/PFT.cpp \
					  lib/UdpSocket.h \
					  lib/UdpSocket.cpp \
					  lib/InetAddress.h \
					  lib/InetAddress.cpp
endif
